--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -8,6 +8,9 @@
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
+    transition: opactiy 400ms ease-in;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
 }
 
 .show-modal {
@@ -23,7 +26,7 @@
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 30%;
 }
 
 .close {
@@ -39,11 +42,57 @@
     cursor: pointer;
 }
 
+li {
+    transition: font-size 1s;
+}
+
 li:hover, li:focus {
-    color: #aaa;
     cursor: pointer;
+    text-decoration: underline;
+}
+
+html > body {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(128, 128, 128, 0.1);
+}
+
+.float-right {
+    display: block;
+    float:right;
+}
+
+.list {
+    width: fit-content;
 }
 
 #root {
-    font-family: Arial, Helvetica, sans-serif;
+
+    width: 50%;
+    /*margin: 0% 90% 0% 10%;*/
+    margin: auto;
+    background-color: #fff;
+    border: 1px solid #fff;
+    /*padding: 10px;*/
+}
+
+.title-font {
+    color: #fefefe;
+}
+
+.subtitle-font {
+    font-size: 11px;
+    color: #666;
+}
+
+.header {
+    margin: 0;
+}
+
+h1 {
+    background-color: #88B04B;
+}
+
+.main-content {
+    padding: 0px 10px 10px 10px;
 }
