--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -7,10 +7,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    transition: opactiy 400ms ease-in;
-    -webkit-transition: opacity 400ms ease-in;
-    -moz-transition: opacity 400ms ease-in;
+    background-color: rgba(0, 0, 0, 0.4);   
 }
 
 .show-modal {
@@ -67,13 +64,11 @@ html > body {
 }
 
 #root {
-
+    height: 100%;
     width: 50%;
-    /*margin: 0% 90% 0% 10%;*/
     margin: auto;
     background-color: #fff;
     border: 1px solid #fff;
-    /*padding: 10px;*/
 }
 
 .title-font {
@@ -95,4 +90,10 @@ h1 {
 
 .main-content {
     padding: 0px 10px 10px 10px;
+}
+
+@media only screen and (max-width: 700px) {
+    #root {
+        width: 100%;
+    }
 }
